--- a/css/style.css
+++ b/css/style.css
@@ -133,8 +133,17 @@ header {
   align-items: center;
   padding-top: 214px;
   padding-bottom: 200px;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../image/change-4/background-image-contact.png);
+  background-repeat: no-repeat;
+  background-position: left center;
+  background-size: cover;
 
-  background-color: var(--color-background-second);
+  /* background-color: var(--color-background-second);
+  rgba(47, 48, 58, 0.4); */
   color: var(--color-invert);
 }
 .contact_title {
