--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,7 @@ header {
 .header_link_email:hover {
   color: var(--background-color-even);
 }
+/* 4e */
 .contact {
   width: 100%;
   display: flex;
