--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
   --color-background-action: #2196f3;
   --background-color-even: #188ce8;
   --color-border-one: #eeeeee;
+  --color-fill-svg: #afb1b8;
+  --color-background-svg: #f5f5f5;
 }
 html {
   box-sizing: border-box;
@@ -17,7 +19,7 @@ html {
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 h1,
 h2,
@@ -25,9 +27,13 @@ h3,
 h4,
 h5,
 h6,
-p {
+p,
+ul,
+li {
   margin-top: 0;
   margin-bottom: 0;
+  padding-left: 0;
+  padding-right: 0;
 }
 body {
   font-family: "Roboto", sans-serif;
@@ -40,30 +46,58 @@ a {
 li {
   list-style-type: none;
 }
+img {
+  display: block;
+}
+.visually-hidden {
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.title {
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--color-primary);
+}
 .container {
-  width: 1170px;
+  width: 1200px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
 }
-header {
-  /* height: 80px; */
-  display: block;
+.header {
+  border-bottom: 1px solid #ececec;
+}
+.header-container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+}
+.nav {
+  display: flex;
+  align-items: center;
+  padding-left: 0;
 }
 
 .nav-item {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-left: 0;
-}
-.nav_list_logo {
-  margin-right: 93px;
 }
 .nav_link_logo {
+  margin-right: 93px;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -81,6 +115,10 @@ header {
 }
 
 .nav_link_menu {
+  padding-top: 32px;
+  padding-bottom: 32px;
+
+  display: block;
   color: var(--color-primary);
   font-weight: 500;
   font-size: 14px;
@@ -88,45 +126,42 @@ header {
   letter-spacing: 0.02em;
 }
 
-.nav_list:not(:last-of-type) .nav_link_menu {
+.nav_list:not(:last-of-type) {
   margin-right: 50px;
 }
 .nav_list .nav_link_menu:hover,
 .nav_list .nav_link_menu:focus {
   color: var(--background-color-even);
 }
-/* .nav_list .nav_link_menu:hover::after {
-  display: block;
-  width: 48px;
-  height: 4px;
-
-  background: #2196f3;
-  border-radius: 2px;
-  content: " ";
-  margin-right: 0;
-  margin-top: 32px;
-} */
 .nav_link_menu.current {
   color: var(--color-action);
 }
-
 .header-contact {
   display: flex;
-  padding-top: 24px;
   padding-left: 0;
   margin-top: 0;
+  margin-left: auto;
+}
+.email-img,
+.email-tel {
+  margin-right: 10px;
+}
+
+.header_list_email {
+  margin-left: auto;
 }
 .header_link_email {
-  margin-left: auto;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.13;
   letter-spacing: 0.02em;
 
   color: var(--color-text-deck);
+}
+.header_list_tel {
+  margin-left: 50px;
 }
 .header_link_tel {
-  margin-left: 50px;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.13;
@@ -134,18 +169,22 @@ header {
 
   color: var(--color-text-deck);
 }
+.header_link_email:hover .email-img,
+.header_link_email:focus .email-img,
+.header_link_tel:hover .email-tel,
+.header_link_tel:focus .email-tel {
+  fill: var(--color-action);
+}
+
 .header_link_tel:hover,
 .header_link_email:hover {
   color: var(--background-color-even);
 }
-/* 4e */
 .contact {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 214px;
+  padding-top: 200px;
   padding-bottom: 200px;
+  background-color: var(--color-background-second);
+
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
@@ -155,21 +194,27 @@ header {
   background-position: left center;
   background-size: cover;
 
-  /* background-color: var(--color-background-second);
-  rgba(47, 48, 58, 0.4); */
   color: var(--color-invert);
 }
+
 .contact_title {
-  width: 700px;
+  max-width: 700px;
+  margin: 0 auto;
   margin-bottom: 30px;
+
   font-size: 44px;
   line-height: 1.3;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   text-align: center;
+
+  color: var(--color-invert);
 }
 .contact_btn {
-  padding: 10px 32px 10px 32px;
+  display: block;
+  margin: 0 auto;
+  min-width: 216px;
+  padding: 10px 22px 10px 22px;
   border: 4px solid var(--color-action);
   border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -183,105 +228,93 @@ header {
 .contact_btn:hover {
   background-color: var(--background-color-even);
 }
-.about {
-  padding-bottom: 94px;
-}
-.about_title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.6;
-  text-align: center;
-  letter-spacing: 0.03em;
-
-  color: var(--color-primary);
-}
 .about_item {
-  padding-left: 0;
   display: flex;
-  justify-content: space-between;
 }
+.about_list_feature:not(:last-of-type) {
+  margin-right: 30px;
+}
+.about_list_feature {
+  max-width: 270px;
+  text-align: left;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+}
+/* 4e */
+.about_link_item {
+  display: block;
+  padding: 25px 100px;
+  margin-bottom: 30px;
+  background-color: var(--color-background-brand);
+  border-radius: 4px;
+}
+
 .about_feature_title {
   margin-bottom: 10px;
-  width: 270px;
 
-  margin-right: 30px;
   font-weight: 700;
-  font-size: 14px;
   line-height: 1.3;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
-  text-align: left;
+
   color: var(--color-primary);
 }
 .descript_text {
-  width: 270px;
-  margin-right: 30px;
   font-weight: 400;
-  font-size: 14px;
   line-height: 1.7;
-  letter-spacing: 0.03em;
-  text-align: left;
 
   color: var(--color-text-deck);
 }
 .work {
   padding-bottom: 94px;
 }
-.work_title {
-  margin-bottom: 38px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.6;
-  text-align: center;
-  letter-spacing: 0.03em;
 
-  color: var(--color-primary);
-}
 .work-item {
   display: flex;
-  justify-content: space-between;
-  padding-left: 0;
-  padding-right: 0;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
 }
 .work_list_img {
-  width: 370;
-  height: 294;
-  /* margin-right: 30px; */
+  margin-left: 30px;
+  margin-top: 30px;
+  flex-basis: calc((100% - 90px) / 3);
 }
+
 .teams {
-  padding-top: 74px;
-  padding-bottom: 74px;
   font-family: "Roboto";
   background-color: var(--color-background-brand);
 }
-.teams_title {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.3;
-  text-align: center;
-  letter-spacing: 0.03em;
 
-  color: var(--color-primary);
-}
 .team_list {
   padding-left: 0;
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
+  /*  2й спосіб*/
 }
+/* .teams_item:not(:nth-child(4n)) {
+  margin-right: 30px;
+} */
 .teams_item {
-  /* margin-left: 30px; */
+  margin-left: 30px;
+  margin-top: 30px;
+  flex-basis: calc((100% - 120px) / 4);
   background: var(--color-background-primary);
+}
+
+.team_member_card {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background: #ffffff;
+
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.teams_item .teams_photo {
-  width: 270px;
-  height: 260px;
-}
 .teams_name {
-  margin-top: 30px;
+  margin-bottom: 10px;
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.2;
@@ -292,8 +325,6 @@ header {
   color: var(--color-primary);
 }
 .teams_position {
-  margin-top: 10px;
-  margin-bottom: 30px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.2;
@@ -303,12 +334,83 @@ header {
 
   color: var(--color-text-deck);
 }
+/* 4e */
+.team_list_icon {
+  display: flex;
+  margin: 16px 32px 30px 32px;
+}
+.teams_link_icon {
+  width: 44px;
+  height: 44px;
+  border-radius: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-background-primary);
+}
+.team_item_icon:not(:last-of-type) {
+  margin-right: 10px;
+}
+.teams_icon {
+  fill: var(--color-fill-svg);
+}
+.teams_link_icon:hover {
+  background-color: var(--color-action);
+}
+.teams_link_icon:hover .teams_icon,
+.teams_link_icon:focus .teams_icon {
+  fill: var(--color-background-primary);
+}
+.partner {
+  background-color: var(--color-background-svg);
+}
+.partner_list {
+  display: flex;
+}
+
+.partner_item {
+  padding: 16px 32px;
+  border: 1px solid var(--color-fill-svg);
+  border-radius: 4px;
+  background-color: var(--color-background-svg);
+}
+
+.partner_item:not(:last-of-type) {
+  margin-right: 30px;
+}
+
+.partner_item:hover,
+.partner_item:focus {
+  border: 1px solid var(--color-action);
+}
+
+.partner_link:hover .partner_icon,
+.partner_link:focus .partner_icon {
+  fill: var(--color-action);
+}
+.partner_icon {
+  width: 106px;
+  height: 60px;
+  fill: var(--color-fill-svg);
+}
+
 .footer {
-  width: 100%;
-  padding: 60px 60px;
+  padding: 60px 0;
   background-color: var(--color-background-second);
 }
+
+address {
+  margin-top: 20px;
+}
+.address_list {
+  display: block;
+  font-style: normal;
+  margin-right: 70px;
+}
+
 .footer_logo_link {
+  margin-bottom: 20px;
+
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -325,13 +427,13 @@ header {
   flex-direction: column;
   align-items: flex-start;
 }
-.address_item {
-  margin-bottom: 13px;
-}
 .address_city_item {
-  margin-top: 20px;
-  margin-bottom: 13px;
+  margin-bottom: 9px;
 }
+.address_item {
+  margin-bottom: 9px;
+}
+
 .address_link {
   font-weight: 400;
   font-size: 14px;
@@ -341,81 +443,99 @@ header {
   color: var(--color-invert);
 }
 .footer_contact {
-  margin-bottom: 9px;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.4;
   letter-spacing: 0.03em;
 
   color: var(--color-opacity);
-  /* color: rgba(255, 255, 255, 0.6); */
 }
-/* portfolio */
-.address_list {
-  display: block;
+.flex {
+  display: flex;
+}
+.footer_social_list {
+  display: flex;
+}
+.footer_social_title {
+  margin-bottom: 20px;
+  font-family: "Roboto";
   font-style: normal;
-}
-.services {
-  padding-top: 60px;
-}
-.services_title {
-  margin-bottom: 30px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.3;
-  text-align: center;
+  font-size: 14px;
+  line-height: 1.4;
   letter-spacing: 0.03em;
+  text-transform: uppercase;
 
-  color: var(--color-primary);
+  color: #ffffff;
 }
+.social_item:not(:last-of-type) {
+  margin-right: 10px;
+}
+.social_link {
+  background: rgba(255, 255, 255, 0.1);
+  fill: var(--color-invert);
+}
+.social_link:hover {
+  background-color: var(--color-action);
+  fill: var(--color-invert);
+}
+/* portfolio css */
 .services_list {
   display: flex;
   justify-content: center;
-  padding-bottom: 30px;
+  margin-bottom: 50px;
 }
-.services_item_btn {
-  margin-left: 30px;
+.services_item_btn:not(:last-of-type) {
+  margin-right: 10px;
 }
 .services_btn {
   padding: 6px 26px;
   background: var(--color-background-brand);
   border: var(--color-background-brand);
   border-radius: 4px;
-  /* box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12); */
 
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
   text-align: center;
-  color: #212121;
+  color: var(--color-primary);
 }
 .services_btn:hover,
 .services_btn:focus {
   background: var(--color-background-action);
-  /* box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12); */
+
   color: var(--color-background-primary);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 .server_menu {
-  padding-left: 0;
-  width: 1500px;
-  display: block;
   display: flex;
   flex-wrap: wrap;
+  margin-left: -30px;
+  margin-bottom: -30px;
+  flex-basis: calc((100% - 90px) / 3);
 }
 .server_item {
-  margin-right: 20px;
+  margin-left: 30px;
   margin-bottom: 30px;
-  width: 370px;
-  height: 404px;
+}
+
+.card_border {
   background: var(--color-background-primary);
   border: 1px solid var(--color-border-one);
+
+  border-top: none;
+  padding: 20px 24px;
 }
+.server_card:hover .card_border {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .server_menu_title {
-  padding-top: 20px;
-  padding-left: 24px;
   margin-bottom: 4px;
+
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -423,8 +543,6 @@ header {
   color: var(--color-primary);
 }
 .server_menu_descript {
-  padding-left: 24px;
-  padding-bottom: 20px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.8;
