--- a/css/style.css
+++ b/css/style.css
@@ -552,17 +552,22 @@ address {
   border-top: none;
   padding: 20px 24px;
 }
-/* .server_card:hover .card_border,
+.server_card:hover .server_img,
+.server_card:focus .server_img {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.server_card:hover .card_border,
 .server_card:focus .card_border {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-} */
-
+}
+/* 
 .server_item:hover,
 .server_item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+} */
 .server_menu_title {
   margin-bottom: 4px;
 
